--- a/results/report.qmd
+++ b/results/report.qmd
@@ -14,8 +14,6 @@ execute:
   cache: true
 ---
 
-Use this as a template. Keep the headers and remove all other text. In all, your report can be quite short. When it is complete, render and then push changes to your team repository.
-
 ```{r}
 # load any other packages and read data here
 library(tidyverse)
@@ -117,6 +115,8 @@ The proteins selected for the classifier are the following:
 -   CSRP3
 -   MIG
 
+$$
+
 ## Findings
 
 Summarize your findings here. I've included some subheaders in a way that seems natural to me; you can structure this section however you like.
@@ -139,6 +139,29 @@ Additionally, instead of using a hard intersection between the top 10 proteins, 
 
 ### Improved classifier
 
-**Task 4:** Our alternate protein panel consisted of 35 proteins versus the 5 used in the `inclass-analysis`. We found that combining prior knowledge of protein importance with regularized classification lead to the best model accuracy. Overall our method of combining multiple t-tests, Random Forest importance, and the guided LASSO approach led to improved results compared to the baseline displaying $8\%$ increase in accuracy, $27\%$ increase in specificity, $\approx 3\%$ decrease in AUC, and an $8\%$ decrease in sensitivity. Even though AUC and sensitivity decreased slightly, the other metrics show an overall improvement in classification accuracy.
+**Task 4:** We explored two distinct alternative panel approaches for Task 4: a Pure LASSO approach and a Guided LASSO approach, benchmarking both against the original In-class Intersection model (a 5-protein panel). Our methods sought either a comparable simpler panel or an alternative panel with improved classification performance.The Pure LASSO approach used LASSO penalized regression for both feature selection and final classification, resulting in a 43-protein panel. This panel prioritized reducing false positives and resulted in a notable performance trade-off:
 
-We also found that just running LASSO regularization on the whole set of proteins led to similar but slightly decreased classification accuracy compared to the baseline approach. In order to navigate around this, the incorporated prior knowledge of the 2-method statistically validated panel of proteins proved useful.
+```{r}
+comparison_data <- data.frame(
+  Metric = c("Accuracy", "Sensitivity", "Specificity", "AUROC"),
+  InClassIntersection = c(0.774, 0.812, 0.733, 0.883),
+  PureLASSO = c(0.767, 0.750, 0.933, 0.858),
+  ChangeVsBaseline = c("$\\approx 1\\%$ decrease", "$7.6\\%$ decrease", "$27.3\\%$ increase", "$\\approx 2.8\\%$ decrease"),
+  KeyInsight = c("Comparable overall accuracy.", "Reduced ability to correctly identify ASD cases.", "Vastly improved performance in ruling out controls.", "Lower overall discrimination ability.")
+)
+
+# Render the table using kable with appropriate formatting
+knitr::kable(
+  comparison_data, 
+  caption = "Comparative Performance and Insights: Pure LASSO vs. In-class Baseline",
+  col.names = c("Metric", "In-class Intersection", "Pure LASSO", "Change vs. Baseline", "Key Insight"),
+  align = 'lcccc', # Left-align first column, Center-align the rest
+  digits = 3 # Ensure numerical columns are formatted nicely
+)
+
+```
+
+
+The most significant finding from the Pure LASSO model is the dramatic increase in Specificity (from $0.733$ to $0.933$). This trade-off is valuable, as it greatly reduces the rate of false positives, making the panel highly reliable for control classification, a desirable characteristic for preliminary diagnostic screening.
+
+In addition to the Pure LASSO model, the Guided LASSO approach (using prior knowledge combined with LASSO, as detailed in the project narrative) resulted in a 35-protein panel. While the performance metrics for this model were similar to the baseline across all metrics except Specificity (Accuracy $0.770$, Sensitivity $0.745$, Specificity $0.733$, AUROC $0.857$), the overall strategy of combining multiple feature selection methods (t-tests, Random Forest, and Guided LASSO) provided a robust and statistically validated pathway to stable panel selection.
