--- a/results/report.qmd
+++ b/results/report.qmd
@@ -34,8 +34,6 @@ Preprocessing involved removing missing values, applying a log₁₀ transformat
 
 ## Summary of published analysis
 
-Summarize the methodology of the paper in 1-3 paragraphs. You need not explain the methods in depth as we did in class; just indicate what methods were used and how they were combined. If possible, include a diagram that depicts the methodological design. (Quarto has support for [GraphViz and Mermaid flowcharts](https://quarto.org/docs/authoring/diagrams.html).) Provide key results: the proteins selected for the classifier and the estimated accuracy.
-
 The original researchers used multiple *t*-tests to see whether there were significant differences in protein levels between the ASD group and the neurotypical group. Based on those *t* values, the top 10 proteins were selected for the prediction model. Each protein was also correlated with ADOS scores and the top 10 highly correlated proteins were selected. The third approach was random forest, which involves using a random forest to predict whether a participant has ASD or is typically developing. By keeping track of which variables were used most to define splits, a variable importance score can be used to determine which predictors were most influential in prediction. Using this method, the top proteins were selected.
 
 After running all three methods and determining the top 10 proteins for each method, 5 proteins that were common to all three methods were selected as the core proteins. Each of the other proteins were added one at a time to see their impact on the AUC, leading to about four additional proteins being classified as optimal proteins. The final 9 proteins were IgD, suPAR, MAPK14, EPHB2, DERM, ROR1, GI24, elF-4H, and ARSB. After all nine were combined, the AUC of the classifier was approximately 0.860.
@@ -68,33 +66,7 @@ Additionally, instead of using a hard intersection between the top 10 proteins, 
 
 ### Improved classifier
 
-**Task 4:** We explored two distinct alternative panel approaches for Task 4: a Pure LASSO approach and a Guided LASSO approach, benchmarking both against the original In-class Intersection model (a 5-protein panel). Our methods sought either a comparable simpler panel or an alternative panel with improved classification performance.The Pure LASSO approach used LASSO penalized regression for both feature selection and final classification, resulting in a 43-protein panel. This panel prioritized reducing false positives and resulted in a notable performance trade-off:
-
-```{r}
-comparison_data <- data.frame(
-  Metric = c("Accuracy", "Sensitivity", "Specificity", "AUROC"),
-  InClassIntersection = c(0.774, 0.812, 0.733, 0.883),
-  PureLASSO = c(0.767, 0.750, 0.933, 0.858),
-  ChangeVsBaseline = c("$\\approx 1\\%$ decrease", "$7.6\\%$ decrease", "$27.3\\%$ increase", "$\\approx 2.8\\%$ decrease"),
-  KeyInsight = c("Comparable overall accuracy.", "Reduced ability to correctly identify ASD cases.", "Vastly improved performance in ruling out controls.", "Lower overall discrimination ability.")
-)
-
-# Render the table using kable with appropriate formatting
-knitr::kable(
-  comparison_data, 
-  caption = "Comparative Performance and Insights: Pure LASSO vs. In-class Baseline",
-  col.names = c("Metric", "In-class Intersection", "Pure LASSO", "Change vs. Baseline", "Key Insight"),
-  align = 'lcccc', # Left-align first column, Center-align the rest
-  digits = 3 # Ensure numerical columns are formatted nicely
-)
-
-```
-
-The most significant finding from the Pure LASSO model is the dramatic increase in Specificity (from $0.733$ to $0.933$). This trade-off is valuable, as it greatly reduces the rate of false positives, making the panel highly reliable for control classification, a desirable characteristic for preliminary diagnostic screening.
-
-In addition to the Pure LASSO model, the Guided LASSO approach (using prior knowledge combined with LASSO, as detailed in the project narrative) resulted in a 35-protein panel. While the performance metrics for this model were similar to the baseline across all metrics except Specificity (Accuracy $0.770$, Sensitivity $0.745$, Specificity $0.733$, AUROC $0.857$), the overall strategy of combining multiple feature selection methods (t-tests, Random Forest, and Guided LASSO) provided a robust and statistically validated pathway to stable panel selection.
-
-**Q4:** We chose to find an alternate protein panel that achieves improved classification accuracy using a guided LASSO approach with differential penalties. Proteins identified through both multiple testing with t-tests and Random Forest importance (`proteins_sstar`) were assigned zero penalty to ensure these were included in the panel without significant shrinkage due to regularization. So, this prior validation was used since there was strong prior evidence that these proteins were relevant. The remaining proteins not selected by the two aforementioned methods received L1 regularization (LASSO regularization), allowing us to discover additional predictive biomarkers while controlling overfitting. We can think of this method from a Bayesian standpoint where the prior data (pre-selected panel of 5 proteins, `proteins_sstar`) informed our belief about protein importance. Overall, our method displayed increased classification accuracy, specifically highlighted by the metric: 'accuracy'. The metrics are depicted below:
+We explored two distinct alternative panel approaches for Task 4: a Pure LASSO approach and a Guided LASSO approach, benchmarking both against the original In-class Intersection model (a 5-protein panel). Our methods sought either a comparable simpler panel or an alternative panel with improved classification performance.The Pure LASSO approach used LASSO penalized regression for both feature selection and final classification, resulting in a 43-protein panel. Proteins identified through both multiple testing with t-tests and Random Forest importance (`proteins_sstar`) were assigned zero penalty to ensure these were included in the panel without significant shrinkage due to regularization. So, this prior validation was used since there was strong prior evidence that these proteins were relevant. The remaining proteins not selected by the two aforementioned methods received L1 regularization (LASSO regularization), allowing us to discover additional predictive biomarkers while controlling overfitting. We can think of this method from a Bayesian standpoint where the prior data (pre-selected panel of 5 proteins, `proteins_sstar`) informed our belief about protein importance. Overall, our method displayed increased classification accuracy, specifically highlighted by the metric: 'accuracy'. The metrics are depicted below:
 
 $$
 \begin{array}{llr}
@@ -120,7 +92,31 @@ $$ Compared to the benchmark results: $$
 \end{array}
 $$
 
-The proteins selected for the classifier are the following:
+This panel prioritized reducing false positives and resulted in a notable performance trade-off:
+
+```{r}
+comparison_data <- data.frame(
+  Metric = c("Accuracy", "Sensitivity", "Specificity", "AUROC"),
+  InClassIntersection = c(0.774, 0.812, 0.733, 0.883),
+  PureLASSO = c(0.767, 0.750, 0.933, 0.858),
+  ChangeVsBaseline = c("$\\approx 1\\%$ decrease", "$7.6\\%$ decrease", "$27.3\\%$ increase", "$\\approx 2.8\\%$ decrease"),
+  KeyInsight = c("Comparable overall accuracy.", "Reduced ability to correctly identify ASD cases.", "Vastly improved performance in ruling out controls.", "Lower overall discrimination ability.")
+)
+
+# Render the table using kable with appropriate formatting
+knitr::kable(
+  comparison_data, 
+  caption = "Comparative Performance and Insights: Pure LASSO vs. In-class Baseline",
+  col.names = c("Metric", "In-class Intersection", "Pure LASSO", "Change vs. Baseline", "Key Insight"),
+  align = 'lcccc', # Left-align first column, Center-align the rest
+  digits = 3 # Ensure numerical columns are formatted nicely
+)
+
+```
+
+The most significant finding from the Pure LASSO model is the dramatic increase in Specificity (from $0.733$ to $0.933$). This trade-off is valuable, as it greatly reduces the rate of false positives, making the panel highly reliable for control classification, a desirable characteristic for preliminary diagnostic screening.
+
+In addition to the Pure LASSO model, the Guided LASSO approach (using prior knowledge combined with LASSO, as detailed in the project narrative) resulted in a 35-protein panel. The proteins selected for the classifier are the following:
 
 -   CD59
 -   4-1BB
@@ -157,3 +153,5 @@ The proteins selected for the classifier are the following:
 -   a-Synuclein
 -   CSRP3
 -   MIG
+
+While the performance metrics for this model were similar to the baseline across all metrics except Specificity (Accuracy $0.770$, Sensitivity $0.745$, Specificity $0.733$, AUROC $0.857$), the overall strategy of combining multiple feature selection methods (t-tests, Random Forest, and Guided LASSO) provided a robust and statistically validated pathway to stable panel selection.
