--- a/results/report.qmd
+++ b/results/report.qmd
@@ -128,12 +128,12 @@ knitr::kable(
   digits = 3 # Ensure numerical columns are formatted nicely
 )
 
-```
 
+$$
+  
 The most significant finding from the Pure LASSO model is the dramatic increase in Specificity (from $0.733$ to $0.933$). This trade-off is valuable, as it greatly reduces the rate of false positives, making the panel highly reliable for control classification, a desirable characteristic for preliminary diagnostic screening.
 
 In addition to the Pure LASSO model, the Guided LASSO approach (using prior knowledge combined with LASSO, as detailed in the project narrative) resulted in a 35-protein panel. The proteins selected for the classifier are the following:
-
 -   CD59
 -   4-1BB
 -   Dtk
@@ -169,6 +169,10 @@ In addition to the Pure LASSO model, the Guided LASSO approach (using prior know
 -   a-Synuclein
 -   CSRP3
 -   MIG
+
+
+![Question 4 Pure LASSO](../images/Q4PureLasso.png){width="50%"}
+
 
 While the performance metrics for this model were similar to the baseline across all metrics except Specificity (Accuracy $0.770$, Sensitivity $0.745$, Specificity $0.733$, AUROC $0.857$), the overall strategy of combining multiple feature selection methods (t-tests, Random Forest, and Guided LASSO) provided a robust and statistically validated pathway to stable panel selection.
 
