--- a/results/report.qmd
+++ b/results/report.qmd
@@ -38,6 +38,10 @@ The original researchers used multiple *t*-tests to see whether there were signi
 
 After running all three methods and determining the top 10 proteins for each method, 5 proteins that were common to all three methods were selected as the core proteins. Each of the other proteins were added one at a time to see their impact on the AUC, leading to about four additional proteins being classified as optimal proteins. The final 9 proteins were IgD, suPAR, MAPK14, EPHB2, DERM, ROR1, GI24, elF-4H, and ARSB. After all nine were combined, the AUC of the classifier was approximately 0.860.
 
+Below is a flowchart of this process.
+
+![](images/flowchart.png){alt="Question 1 comparison" fig-align="left" width="500"}
+
 ## Findings
 
 ### Impact of preprocessing and outliers
@@ -46,19 +50,19 @@ After looking at the raw protein level distributions for a sample of 4 proteins 
 
 The log transformation of the protein levels helps to compress the scale of protein levels across the wide range of positive values that were encountered. Additionally, the logarithm helps with skewed data, helping to make data more symmetric and closer to a normal distribution (as confirmed with histograms and a QQ Plot).
 
-![Question 1 comparison](../images/Q1Comparison.png){width="50%"}
+![Question 1 comparison](../images/Q1Comparison.png){fig-align="center" width="60%"}
 
 From the density plot, `prot2` looks skewed (strongly right-skewed). It contain large outliers, and the scale of `prot2`'s protein level is very high. But, after log transforming, the right-skewed `prot2` now appears more symmetric and of a much smaller and more readable scale.
 
 **Task 2:** After removing the original trimming, we flagged protein-level outliers at $|z|>3$, where 99.7% of data is captured under a normal curve. Using the Tukey cutoff $(Q3 + 1.5\cdot IQR \approx 29.4)$, the 154 test subjects were considered outliers if they had $\geq 30$ outlier proteins. This flagged 13 outlier subjects, as listed below.
 
-![](images/q2top13-02.png){alt="Question 1 comparison" fig-align="center" width="130"}
+![](images/q2top13-02.png){alt="Question 1 comparison" fig-align="center" width="115"}
 
 The frequency of these outlier subjects are $\frac{4}{76} \approx 5.3\%$ in the ASD group and $\frac{9}{78} \approx 11.5\%$ in the TD group. 
 
 We then compared the number of outlier proteins for subjects across both groups.
 
-![](images/q2boxplot-03.png){alt="Question 1 comparison" fig-align="center" width="500"}
+![](images/q2boxplot-03.png){alt="Question 1 comparison" fig-align="center" width="450"}
 
 From the visual, it seems like the TD group has more subjects w/ higher outlier counts, including the overall maximum around 150. This supports the previous table, as 9/13 of the outlier subjects were from the TD group.
 
@@ -110,69 +114,19 @@ $$
 
 This panel prioritized reducing false positives and resulted in a notable performance trade-off:
 
-```{r}
-comparison_data <- data.frame(
-  Metric = c("Accuracy", "Sensitivity", "Specificity", "AUROC"),
-  InClassIntersection = c(0.774, 0.812, 0.733, 0.883),
-  PureLASSO = c(0.767, 0.750, 0.933, 0.858),
-  ChangeVsBaseline = c("$\\approx 1\\%$ decrease", "$7.6\\%$ decrease", "$27.3\\%$ increase", "$\\approx 2.8\\%$ decrease"),
-  KeyInsight = c("Comparable overall accuracy.", "Reduced ability to correctly identify ASD cases.", "Vastly improved performance in ruling out controls.", "Lower overall discrimination ability.")
-)
+\`\`\`{r} comparison_data \<- data.frame( Metric = c("Accuracy", "Sensitivity", "Specificity", "AUROC"), InClassIntersection = c(0.774, 0.812, 0.733, 0.883), PureLASSO = c(0.767, 0.750, 0.933, 0.858), ChangeVsBaseline = c("$\\approx 1\\%$ decrease", "$7.6\\%$ decrease", "$27.3\\%$ increase", "$\\approx 2.8\\%$ decrease"), KeyInsight = c("Comparable overall accuracy.", "Reduced ability to correctly identify ASD cases.", "Vastly improved performance in ruling out controls.", "Lower overall discrimination ability.") )
 
 # Render the table using kable with appropriate formatting
-knitr::kable(
-  comparison_data, 
-  caption = "Comparative Performance and Insights: Pure LASSO vs. In-class Baseline",
-  col.names = c("Metric", "In-class Intersection", "Pure LASSO", "Change vs. Baseline", "Key Insight"),
-  align = 'lcccc', # Left-align first column, Center-align the rest
-  digits = 3 # Ensure numerical columns are formatted nicely
-)
 
+knitr::kable( comparison_data, caption = "Comparative Performance and Insights: Pure LASSO vs. In-class Baseline", col.names = c("Metric", "In-class Intersection", "Pure LASSO", "Change vs. Baseline", "Key Insight"), align = 'lcccc', \# Left-align first column, Center-align the rest digits = 3 \# Ensure numerical columns are formatted nicely )
 
-$$
-  
+\$\$
+
 The most significant finding from the Pure LASSO model is the dramatic increase in Specificity (from $0.733$ to $0.933$). This trade-off is valuable, as it greatly reduces the rate of false positives, making the panel highly reliable for control classification, a desirable characteristic for preliminary diagnostic screening.
 
-In addition to the Pure LASSO model, the Guided LASSO approach (using prior knowledge combined with LASSO, as detailed in the project narrative) resulted in a 35-protein panel. The proteins selected for the classifier are the following:
--   CD59
--   4-1BB
--   Dtk
--   Cadherin-5
--   HAI-1
--   Kallikrein 11
--   PAI-1
--   Growth hormone receptor
--   IGFBP-4
--   MRC2
--   CRDL1
--   IL-17 RD
--   TPSG1
--   MP2K2
--   ENPP7
--   MFGM
--   PCSK7
--   ITI heavy chain H4
--   IgD
--   DBNL
--   DERM
--   Elafin
--   RELT
--   PPID
--   Semaphorin 3E
--   CD27
--   CNDP1
--   IL-17 RC
--   SRCN1
--   Epo
--   GDNF
--   14-3-3 protein zeta/delta
--   a-Synuclein
--   CSRP3
--   MIG
-
+In addition to the Pure LASSO model, the Guided LASSO approach (using prior knowledge combined with LASSO, as detailed in the project narrative) resulted in a 35-protein panel. The proteins selected for the classifier are the following: - CD59 - 4-1BB - Dtk - Cadherin-5 - HAI-1 - Kallikrein 11 - PAI-1 - Growth hormone receptor - IGFBP-4 - MRC2 - CRDL1 - IL-17 RD - TPSG1 - MP2K2 - ENPP7 - MFGM - PCSK7 - ITI heavy chain H4 - IgD - DBNL - DERM - Elafin - RELT - PPID - Semaphorin 3E - CD27 - CNDP1 - IL-17 RC - SRCN1 - Epo - GDNF - 14-3-3 protein zeta/delta - a-Synuclein - CSRP3 - MIG
 
 ![Question 4 Pure LASSO](../images/Q4PureLasso.png){width="50%"}
-
 
 While the performance metrics for this model were similar to the baseline across all metrics except Specificity (Accuracy $0.770$, Sensitivity $0.745$, Specificity $0.733$, AUROC $0.857$), the overall strategy of combining multiple feature selection methods (t-tests, Random Forest, and Guided LASSO) provided a robust and statistically validated pathway to stable panel selection.
 
